openjdk10 compat